--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
+    "moment-timezone": "^0.5.34",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-intl": "^5.20.2",
+    "react-query": "^3.34.16",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
